cmake_minimum_required(VERSION 3.25)
project(minirt)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(lib/libft/include)
include_directories(lib/minilibx_opengl_20191021)

add_executable(minirt
        include/deprecated/t_ambient_light.h
        include/deprecated/t_raytracing_data.h
        include/font/render.h
        include/font/rendering_structs.h
        include/font/ttf_parser.h
        include/gui/box.h
        include/gui/boxes.h
        include/gui/gui.h
        include/gui/init.h
        include/gui/main_gui_box.h
        include/gui/object_list_box.h
        include/gui/object_modification_box.h
        include/gui/UI.h
        include/gui/utils.h
        include/math/conversion.h
        include/math/equation.h
        include/math/matrix.h
        include/math/modulo.h
        include/math/quaternion.h
        include/math/vector.h
        include/ray_tracer/camera.h
        include/ray_tracer/rays.h
        include/ray_tracer/render.h
        include/ray_tracer/shade.h
        include/ray_tracer/texture.h
        include/colors.h
        include/engine.h
        include/events.h
        include/hooks.h
        include/image.h
        include/init_scene.h
        include/light.h
        include/material.h
        include/object.h
        include/parsing.h
        include/ppm.h
        include/ray_tracer_gui_api.h
        include/render_frame.h
        include/scene.h
        include/window.h
        lib/libft/include/ft_bitmask.h
        lib/libft/include/ft_bools.h
        lib/libft/include/ft_char.h
        lib/libft/include/ft_colors.h
        lib/libft/include/ft_hashmap.h
        lib/libft/include/ft_io.h
        lib/libft/include/ft_linked_list.h
        lib/libft/include/ft_math.h
        lib/libft/include/ft_mem.h
        lib/libft/include/ft_numbers.h
        lib/libft/include/ft_sort.h
        lib/libft/include/ft_string.h
        lib/libft/include/ft_time.h
        lib/libft/include/ft_vector.h
        lib/libft/include/libft.h
        lib/libft/src/bitmask/bitmask_free.c
        lib/libft/src/bitmask/bitmask_get.c
        lib/libft/src/bitmask/bitmask_get_position.c
        lib/libft/src/bitmask/bitmask_init.c
        lib/libft/src/bitmask/bitmask_set.c
        lib/libft/src/bools/reverse_bool.c
        lib/libft/src/char/is_in_set.c
        lib/libft/src/char/isalnum.c
        lib/libft/src/char/isalpha.c
        lib/libft/src/char/isascii.c
        lib/libft/src/char/isdigit.c
        lib/libft/src/char/isprint.c
        lib/libft/src/char/isspace.c
        lib/libft/src/char/tolower.c
        lib/libft/src/char/toupper.c
        lib/libft/src/hashmap/hm_add_elem.c
        lib/libft/src/hashmap/hm_clear.c
        lib/libft/src/hashmap/hm_delete_elem.c
        lib/libft/src/hashmap/hm_get_content.c
        lib/libft/src/hashmap/hm_get_elem.c
        lib/libft/src/hashmap/hm_get_index.c
        lib/libft/src/hashmap/hm_init.c
        lib/libft/src/hashmap/hm_size.c
        lib/libft/src/io/get_next_line/get_next_line.c
        lib/libft/src/io/get_next_line/get_next_line.h
        lib/libft/src/io/get_next_line/get_next_line_multi_fd.c
        lib/libft/src/io/get_next_line/get_next_line_multi_fd.h
        lib/libft/src/io/get_next_line/get_next_line_utils.c
        lib/libft/src/io/get_next_line/get_next_line_utils_multi_fd.c
        lib/libft/src/io/printf/formating/format.c
        lib/libft/src/io/printf/formating/format_u_x.c
        lib/libft/src/io/printf/get_final_str.c
        lib/libft/src/io/printf/printf.c
        lib/libft/src/io/print_error.c
        lib/libft/src/io/print_position_in_code.c
        lib/libft/src/io/putchar_fd.c
        lib/libft/src/io/putendl_fd.c
        lib/libft/src/io/putnbr_fd.c
        lib/libft/src/io/putstr.c
        lib/libft/src/io/putstr_fd.c
        lib/libft/src/io/read_file.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_get_next_free_current.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_of_dlst_clear.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_push.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlst_reverse.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstadd_back.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstadd_front.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstclear.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstdelone.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstfirst.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstiter.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstlast.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstmap.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstnew.c
        lib/libft/src/linked_list/doubly_linked_void_ptr/dlstsize.c
        lib/libft/src/linked_list/int/lsti_add_back.c
        lib/libft/src/linked_list/int/lsti_add_front.c
        lib/libft/src/linked_list/int/lsti_clear.c
        lib/libft/src/linked_list/int/lsti_cmp.c
        lib/libft/src/linked_list/int/lsti_cpy.c
        lib/libft/src/linked_list/int/lsti_delone.c
        lib/libft/src/linked_list/int/lsti_get_next_free_current.c
        lib/libft/src/linked_list/int/lsti_iter.c
        lib/libft/src/linked_list/int/lsti_last.c
        lib/libft/src/linked_list/int/lsti_map.c
        lib/libft/src/linked_list/int/lsti_new.c
        lib/libft/src/linked_list/int/lsti_push.c
        lib/libft/src/linked_list/int/lsti_reverse.c
        lib/libft/src/linked_list/int/lsti_size.c
        lib/libft/src/linked_list/void_ptr/lst_get_next_free_current.c
        lib/libft/src/linked_list/void_ptr/lst_join_strs.c
        lib/libft/src/linked_list/void_ptr/lst_join_t_strings.c
        lib/libft/src/linked_list/void_ptr/lst_of_lst_clear.c
        lib/libft/src/linked_list/void_ptr/lst_push.c
        lib/libft/src/linked_list/void_ptr/lst_remove_if.c
        lib/libft/src/linked_list/void_ptr/lst_reverse.c
        lib/libft/src/linked_list/void_ptr/lst_sort.c
        lib/libft/src/linked_list/void_ptr/lstadd_back.c
        lib/libft/src/linked_list/void_ptr/lstadd_front.c
        lib/libft/src/linked_list/void_ptr/lstclear.c
        lib/libft/src/linked_list/void_ptr/lstdelone.c
        lib/libft/src/linked_list/void_ptr/lstiter.c
        lib/libft/src/linked_list/void_ptr/lstlast.c
        lib/libft/src/linked_list/void_ptr/lstmap.c
        lib/libft/src/linked_list/void_ptr/lstnew.c
        lib/libft/src/linked_list/void_ptr/lstsize.c
        lib/libft/src/math/sum/sum_int_arr.c
        lib/libft/src/math/sum/sum_uint8_arr.c
        lib/libft/src/math/angle_to_theta.c
        lib/libft/src/mem/bzero.c
        lib/libft/src/mem/calloc.c
        lib/libft/src/mem/memchr.c
        lib/libft/src/mem/memcmp.c
        lib/libft/src/mem/memcpy.c
        lib/libft/src/mem/memmove.c
        lib/libft/src/mem/memset.c
        lib/libft/src/numbers/abs/absf.c
        lib/libft/src/numbers/abs/absi.c
        lib/libft/src/numbers/max/maxf.c
        lib/libft/src/numbers/min/minf.c
        lib/libft/src/numbers/swap/swap_float.c
        lib/libft/src/numbers/swap/swap_int.c
        lib/libft/src/numbers/swap/swap_long.c
        lib/libft/src/numbers/swap/swap_size_t.c
        lib/libft/src/numbers/swap/swap_ssize_t.c
        lib/libft/src/numbers/swap/swap_uint.c
        lib/libft/src/numbers/atof.c
        lib/libft/src/numbers/atoi.c
        lib/libft/src/numbers/atoll.c
        lib/libft/src/numbers/get_smallest_int.c
        lib/libft/src/numbers/itoa.c
        lib/libft/src/sort/msort_int.c
        lib/libft/src/sort/msort_str.c
        lib/libft/src/sort/msort_str_ignore_case.c
        lib/libft/src/string/join/join_strs.c
        lib/libft/src/string/join/strjoin.c
        lib/libft/src/string/join/strjoin_three.c
        lib/libft/src/string/split/free_split.c
        lib/libft/src/string/split/split.c
        lib/libft/src/string/split/split_len.c
        lib/libft/src/string/split/split_set.c
        lib/libft/src/string/split/split_unless_in_quotes.c
        lib/libft/src/string/is_number.c
        lib/libft/src/string/skip_char.c
        lib/libft/src/string/skip_set.c
        lib/libft/src/string/str_is_in_strs.c
        lib/libft/src/string/strchr.c
        lib/libft/src/string/strcmp.c
        lib/libft/src/string/strcmp_ignore_case.c
        lib/libft/src/string/strdup.c
        lib/libft/src/string/striteri.c
        lib/libft/src/string/strlcat.c
        lib/libft/src/string/strlcpy.c
        lib/libft/src/string/strlen.c
        lib/libft/src/string/strmapi.c
        lib/libft/src/string/strncmp.c
        lib/libft/src/string/strnstr.c
        lib/libft/src/string/strrchr.c
        lib/libft/src/string/strrstr.c
        lib/libft/src/string/strtrim.c
        lib/libft/src/string/substr.c
        lib/libft/src/string/t_string_free.c
        lib/libft/src/time/convert_timeval_to_ms.c
        lib/libft/src/time/get_current_time.c
        lib/libft/src/time/get_number_of_fps.c
        lib/libft/src/vector/vector_add_elem.c
        lib/libft/src/vector/vector_append.c
        lib/libft/src/vector/vector_change_size.c
        lib/libft/src/vector/vector_convert_to_array.c
        lib/libft/src/vector/vector_create.c
        lib/libft/src/vector/vector_delete_elem.c
        lib/libft/src/vector/vector_destroy.c
        lib/libft/src/vector/vector_minimize_size.c
        lib/minilibx_opengl_20191021/font.c
        lib/minilibx_opengl_20191021/font.xcf
        lib/minilibx_opengl_20191021/libmlx.a
        lib/minilibx_opengl_20191021/Makefile
        lib/minilibx_opengl_20191021/mlx.h
        lib/minilibx_opengl_20191021/mlx_init_loop.m
        lib/minilibx_opengl_20191021/mlx_init_loop.o
        lib/minilibx_opengl_20191021/mlx_int.h
        lib/minilibx_opengl_20191021/mlx_int_str_to_wordtab.c
        lib/minilibx_opengl_20191021/mlx_int_str_to_wordtab.o
        lib/minilibx_opengl_20191021/mlx_mouse.m
        lib/minilibx_opengl_20191021/mlx_mouse.o
        lib/minilibx_opengl_20191021/mlx_new_image.m
        lib/minilibx_opengl_20191021/mlx_new_image.o
        lib/minilibx_opengl_20191021/mlx_new_window.h
        lib/minilibx_opengl_20191021/mlx_new_window.m
        lib/minilibx_opengl_20191021/mlx_new_window.o
        lib/minilibx_opengl_20191021/mlx_opengl.h
        lib/minilibx_opengl_20191021/mlx_opengl.m
        lib/minilibx_opengl_20191021/mlx_png.c
        lib/minilibx_opengl_20191021/mlx_png.h
        lib/minilibx_opengl_20191021/mlx_png.o
        lib/minilibx_opengl_20191021/mlx_rgb.c
        lib/minilibx_opengl_20191021/mlx_shaders.c
        lib/minilibx_opengl_20191021/mlx_shaders.o
        lib/minilibx_opengl_20191021/mlx_xpm.c
        lib/minilibx_opengl_20191021/mlx_xpm.o
        src/font/parsing/get_glyph_offset.c
        src/font/parsing/get_glyph_outlines.c
        src/font/parsing/get_long_hor_metric.c
        src/font/parsing/read_cmap.c
        src/font/parsing/read_file.c
        src/font/parsing/read_font_directory.c
        src/font/parsing/read_format4.c
        src/font/parsing/read_glyph_outline.c
        src/font/parsing/read_glyph_outline_coordinates.c
        src/font/parsing/read_head.c
        src/font/parsing/read_hhea.c
        src/font/parsing/read_hmtx.c
        src/font/parsing/read_loca.c
        src/font/parsing/read_maxp.c
        src/font/parsing/ttf_get_table_offset.c
        src/font/parsing/ttf_parser.c
        src/font/rendering/do_segments_intersect.c
        src/font/rendering/draw_glyph.c
        src/font/rendering/get_glyph_points.c
        src/font/rendering/get_quadratic_bezier_points.c
        src/font/rendering/write_centered_string_to_image.c
        src/font/get_font.c
        src/gui/box/create_gui_box.c
        src/gui/box/default_gui_box_methods.c
        src/gui/box/destroy_t_gui_box.c
        src/gui/box/get_clicked_gui_box.c
        src/gui/box/mouse_utils.c
        src/gui/main_box/menu_box/init_menu_box.c
        src/gui/main_box/menu_box/init_settings_icon.c
        src/gui/main_box/object_creation_box/init_object_creation_box.c
        src/gui/main_box/object_creation_box/object_creation_on_clicks.c
        src/gui/main_box/init_main_box.c
        src/gui/object_list_box/create_light_gui_box.c
        src/gui/object_list_box/create_object_gui_box.c
        src/gui/object_list_box/init_object_list_box.c
        src/gui/object_list_box/object_box_getters.c
        src/gui/object_list_box/object_list_gui_box_draw.c
        src/gui/object_list_box/object_list_gui_box_on_click.c
        src/gui/object_modification_box/init_color_picker/add_hover_color_circle.c
        src/gui/object_modification_box/init_color_picker/color_getter_functions.c
        src/gui/object_modification_box/init_color_picker/init_base_color_box.c
        src/gui/object_modification_box/init_color_picker/init_color_picker_box.c
        src/gui/object_modification_box/init_color_picker/init_rgb_picker.c
        src/gui/object_modification_box/init_object_modification_box.c
        src/gui/create_boxes_utils.c
        src/gui/create_horizontal_boxes.c
        src/gui/create_n_horizontal_boxes.c
        src/gui/create_vertical_boxes.c
        src/gui/draw_icon.c
        src/gui/float_input_box.c
        src/gui/init_gui.c
        src/hooks/update_object_attributes_modification_box/add_boxes/checkered_pattern_size_on_clicks/x.c
        src/hooks/update_object_attributes_modification_box/add_boxes/checkered_pattern_size_on_clicks/y.c
        src/hooks/update_object_attributes_modification_box/add_boxes/normal_input_box_on_clicks/x.c
        src/hooks/update_object_attributes_modification_box/add_boxes/normal_input_box_on_clicks/y.c
        src/hooks/update_object_attributes_modification_box/add_boxes/normal_input_box_on_clicks/z.c
        src/hooks/update_object_attributes_modification_box/add_boxes/position_input_box_on_clicks/x.c
        src/hooks/update_object_attributes_modification_box/add_boxes/position_input_box_on_clicks/y.c
        src/hooks/update_object_attributes_modification_box/add_boxes/position_input_box_on_clicks/z.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/add_toggle_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/add_x_y_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/add_x_y_z_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/get_box_size.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/get_x_y_input_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/get_x_y_z_input_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/utils/init_description_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_brightness_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_checkered_pattern_color_toggle_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_outline_checkerboard_size_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_height_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_normal_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_position_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_radius_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_reflection_box.c
        src/hooks/update_object_attributes_modification_box/add_boxes/add_specular_reflection_box.c
        src/hooks/update_object_attributes_modification_box/get_box_category_index.c
        src/hooks/update_object_attributes_modification_box/init_cone_attributes_modification_box.c
        src/hooks/update_object_attributes_modification_box/init_cylinder_attributes_modification_box.c
        src/hooks/update_object_attributes_modification_box/init_light_attributes_modification_box.c
        src/hooks/update_object_attributes_modification_box/init_plane_attributes_modification_box.c
        src/hooks/update_object_attributes_modification_box/init_sphere_attributes_modification_box.c
        src/hooks/update_object_attributes_modification_box/update_float_input_boxes.c
        src/hooks/update_object_attributes_modification_box/update_object_attributes_modification_box.c
        src/hooks/button_press.c
        src/hooks/button_release.c
        src/hooks/key_press.c
        src/hooks/key_release.c
        src/hooks/redraw_icons.c
        src/hooks/toggle_gui.c
        src/hooks/update_color_picker_color.c
        src/image/destroy_t_image.c
        src/image/draw.c
        src/image/draw_check_mark.c
        src/image/draw_outline.c
        src/image/image.c
        src/image/put_image_to_image.c
        src/image/round_image_corners.c
        src/light/light.c
        src/light/lights.c
        src/material/material.c
        src/material/texture.c
        src/math/matrix/matrix3.c
        src/math/matrix/matrix3_math.c
        src/math/matrix/matrix3_rotation.c
        src/math/matrix/matrix4.c
        src/math/matrix/matrix4_inverse.c
        src/math/matrix/matrix4_math.c
        src/math/matrix/matrix4_round.c
        src/math/quaternion/quaternion.c
        src/math/quaternion/quaternion_math.c
        src/math/quaternion/quaternion_operations.c
        src/math/quaternion/quaternion_rotation.c
        src/math/vector/vector2.c
        src/math/vector/vector2_math.c
        src/math/vector/vector2_operations.c
        src/math/vector/vector3.c
        src/math/vector/vector3_angle.c
        src/math/vector/vector3_math.c
        src/math/vector/vector3_operations.c
        src/math/vector/vector3_random.c
        src/math/vector/vector3_rotation.c
        src/math/vector/vector4.c
        src/math/vector/vector4_math.c
        src/math/vector/vector4_operations.c
        src/math/conversion.c
        src/math/equation.c
        src/math/modulo.c
        src/object/cone/create.c
        src/object/cone/transformations.c
        src/object/cylinder/create.c
        src/object/cylinder/transformations.c
        src/object/plane/create.c
        src/object/plane/transformations.c
        src/object/sphere/create.c
        src/object/sphere/transformations.c
        src/object/object_calculate_cache.c
        src/object/objects.c
        src/object/transformations.c
        src/parsing/line_parsing/utils/add_object_to_object_list.c
        src/parsing/line_parsing/utils/error.c
        src/parsing/line_parsing/utils/get_color.c
        src/parsing/line_parsing/utils/get_float.c
        src/parsing/line_parsing/utils/get_lighting_ratio.c
        src/parsing/line_parsing/utils/get_normalized_vector.c
        src/parsing/line_parsing/utils/get_position.c
        src/parsing/line_parsing/invalid_scene_content_line.c
        src/parsing/line_parsing/parse_ambient_light.c
        src/parsing/line_parsing/parse_camera.c
        src/parsing/line_parsing/parse_cylinder.c
        src/parsing/line_parsing/parse_light.c
        src/parsing/line_parsing/parse_plane.c
        src/parsing/line_parsing/parse_sphere.c
        src/parsing/free_scene_content.c
        src/parsing/get_scene_content.c
        src/parsing/parse_ppm_file.c
        src/parsing/parse_scene_content.c
        src/parsing/parsing.c
        src/ray_tracer/camera/create.c
        src/ray_tracer/camera/movement.c
        src/ray_tracer/camera/projection.c
        src/ray_tracer/camera/ray.c
        src/ray_tracer/camera/view.c
        src/ray_tracer/rays/intersections/cone.c
        src/ray_tracer/rays/intersections/cone_utils.c
        src/ray_tracer/rays/intersections/cylinder.c
        src/ray_tracer/rays/intersections/cylinder_caps.c
        src/ray_tracer/rays/intersections/cylinder_infinite.c
        src/ray_tracer/rays/intersections/intersection.c
        src/ray_tracer/rays/intersections/plane.c
        src/ray_tracer/rays/intersections/sphere.c
        src/ray_tracer/rays/rays.c
        src/ray_tracer/shade/light.c
        src/ray_tracer/shade/shade.c
        src/ray_tracer/shade/shadow.c
        src/material/checkerboard.c
        src/ray_tracer/texture/mapping.c
        src/ray_tracer/texture/texture.c
        src/ray_tracer/interpolate_ray_tracing.c
        src/ray_tracer/render.c
        src/ray_tracer/render_icon.c
        src/ray_tracer/render_ray.c
        src/ray_tracer/render_with_anti_aliasing.c
        src/ray_tracer_gui_api/add_and_remove_object_and_light.c
        src/ray_tracer_gui_api/get_clicked_object.c
        src/render_frame/print_fps_counter.c
        src/render_frame/render_frame.c
        src/render_frame/render_user_interface.c
        src/scene/create.c
        src/close_miniRT.c
        src/color.c
        src/init_minirt.c
        src/main.c src/hooks/update_object_attributes_modification_box/add_boxes/add_cap_checkerboard_size_box.c src/hooks/update_object_attributes_modification_box/add_boxes/cap_checkerboard_size_on_clicks/y.c)
